Переименовала имена полей

--- a/DiagramBidding/Views/Home/Razor.cshtml
+++ b/DiagramBidding/Views/Home/Razor.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Tool.Currency)
+            @Html.DisplayNameFor(model => model.ToolId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Price)
@@ -24,10 +24,10 @@
             @Html.DisplayNameFor(model => model.Date)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Customer.Name)
+            @Html.DisplayNameFor(model => model.CustomerId)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Seller.Name)
+            @Html.DisplayNameFor(model => model.SellerId)
         </th>
     </tr>
 
