Скорректирована дом. страница
Изменена информация и обновлены ссылки на страничке

--- a/DiagramBidding/Views/Home/Index.cshtml
+++ b/DiagramBidding/Views/Home/Index.cshtml
@@ -3,29 +3,30 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Итоги торгов валютами</h1>
+    <p class="lead">
+        По результатам биржевых торгов устанавливаются официальные курсы белорусского рубля к доллару США, к российскому рублю и евро.
+        Инструменты валютного рынка представляют собой валютную пару, состоящую из торгуемой валюты (валюты лота) и сопряженной валюты (валюты в которой будут проводиться расчеты по сделкам с валютой лота).
+    </p>
+    <p><a href="https://www.bcse.by/ru" class="btn btn-primary btn-lg">Подробнее &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Рынки</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            ОАО "Белорусская валютно-фондовая биржа" обслуживает основные сегменты белорусского финансового рынка.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://www.bcse.by/ru/markets">Подробнее &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Итоги</h2>
+        <p>Подробные итоги торгов на валютном, фондовом и других рынках.</p><br>
+        <p><a class="btn btn-default" href="https://www.bcse.by/ru/currencymarket/rates/0">Подробнее &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Правила</h2>
+        <p>Инструкция и документация о порядке торгов, видов документов, тарифы, положения и т.д.</p><br>
+        <p><a class="btn btn-default" href="https://www.bcse.by/ru/rules">Подробнее &raquo;</a></p>
     </div>
 </div>
