--- a/DiagramBidding/Views/Home/Razor.cshtml
+++ b/DiagramBidding/Views/Home/Razor.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DiagramBidding.Models.HandbkTrade>
 @{
-    ViewBag.Title = "Диаграмма Razor";
+    ViewBag.Title = "График Razor";
 }
 <h1>@ViewBag.Title</h1>
 <div class="jumbotron">
