Изменены размеры картинки

--- a/DiagramBidding/Views/Home/Razor.cshtml
+++ b/DiagramBidding/Views/Home/Razor.cshtml
@@ -5,7 +5,7 @@
 <h1>@ViewBag.Title</h1>
 <div class="jumbotron">
     <p class="lead">График зависимости цены валюты от даты:</p>
-    <p><img src="@Url.Action("ShowChart")"> </p>
+    <p><img src="@Url.Action("ShowChart")" width="100%" height="370"> </p>
 </div>
 
     <h3>Результаты сделок:</h3>
